--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -1,2 +1,7 @@
 {# templates/pages/home/index.html.twig #}
-<h1>Test</h1>
+
+{% extends "base.html.twig" %}
+
+{% block body %}
+    <h1>Test</h1>
+{% endblock %}
