Created tag claud controller for tag claud component. Created template for this component. Used this component on index page.

--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -4,4 +4,10 @@
 
 {% block body %}
     <h1>Test</h1>
+
+    {{
+        render(controller(
+            'App\\Controller\\TagClaudController::tagClaud'
+        ))
+    }}
 {% endblock %}
