Prepared files for layout.

--- a/templates/pages/home/index.html.twig
+++ b/templates/pages/home/index.html.twig
@@ -1,6 +1,6 @@
 {# templates/pages/home/index.html.twig #}
 
-{% extends "base.html.twig" %}
+{% extends "layouts/base.html.twig" %}
 
 {% block body %}
     <h1>Test</h1>
